--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=ticketing
 
 spring.datasource.url = jdbc:mysql://localhost/ticketing
-spring.datasource.username = root
-spring.datasource.password =
+spring.datasource.username = ticketing
+spring.datasource.password = ticketing1
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
