--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.application.name=ticketing
 
 spring.datasource.url = jdbc:mysql://localhost/ticketing
 spring.datasource.username = root
-spring.datasource.password =
+spring.datasource.password =root
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
