--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,10 @@ spring.datasource.url = jdbc:mysql://localhost/ticketing
 spring.datasource.username = root
 spring.datasource.password =
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
